--- a/.github/workflows/build-packages.yml
+++ b/.github/workflows/build-packages.yml
@@ -4,7 +4,7 @@ on:
     # Prevents triggering multiple workflows in PRs. Workflows triggered from
     # the same commit shouldn't run simultaneously because they're overwriting
     # each other's packages on Anaconda.
-    branches: [ master ]
+    #    branches: [ master ]
     paths-ignore:
       - '.github/workflows/tuttest.yml'
       - 'README.md'
@@ -23,220 +23,6 @@ defaults:
   run:
     shell: bash
 jobs:
-
-  #1
-  libusb-linux:
-    runs-on: "ubuntu-20.04"
-    env:
-      PACKAGE: "lib/usb"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #2
-  libhidapi-linux:
-    runs-on: "ubuntu-20.04"
-    needs: "libusb-linux"
-    env:
-      PACKAGE: "lib/hidapi"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #3
-  libxml2-linux:
-    runs-on: "ubuntu-20.04"
-    env:
-      PACKAGE: "lib/xml2"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #4
-  icefunprog-linux:
-    runs-on: "ubuntu-20.04"
-    env:
-      PACKAGE: "tools/icefunprog"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #5
-  flterm-linux:
-    runs-on: "ubuntu-20.04"
-    env:
-      PACKAGE: "tools/flterm"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #6
-  libftdi-linux:
-    runs-on: "ubuntu-20.04"
-    needs: "libusb-linux"
-    env:
-      PACKAGE: "lib/ftdi"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #7
-  fxload-linux:
-    runs-on: "ubuntu-20.04"
-    needs: "libusb-linux"
-    env:
-      PACKAGE: "tools/fxload"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #8
-  dfu-util-linux:
-    runs-on: "ubuntu-20.04"
-    needs: "libusb-linux"
-    env:
-      PACKAGE: "tools/dfu-util"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #9
-  iceprog-linux:
-    runs-on: "ubuntu-20.04"
-    needs: ["libusb-linux", "libftdi-linux"]
-    env:
-      PACKAGE: "tools/iceprog"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #10
-  openocd-linux:
-    runs-on: "ubuntu-20.04"
-    needs: ["libusb-linux", "libftdi-linux"]
-    env:
-      PACKAGE: "tools/openocd"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #11
-  openfpgaloader-linux:
-    runs-on: "ubuntu-20.04"
-    needs: ["libusb-linux", "libftdi-linux", "libhidapi-linux"]
-    env:
-      PACKAGE: "tools/openfpgaloader"
-      OS_NAME: "linux"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #12
-  libusb-osx:
-    runs-on: "macos-latest"
-    env:
-      PACKAGE: "lib/usb"
-      OS_NAME: "osx"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #13
-  libhidapi-osx:
-    runs-on: "macos-latest"
-    needs: "libusb-osx"
-    env:
-      PACKAGE: "lib/hidapi"
-      OS_NAME: "osx"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #14
-  libxml2-osx:
-    runs-on: "macos-latest"
-    env:
-      PACKAGE: "lib/xml2"
-      OS_NAME: "osx"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #15
-  icefunprog-osx:
-    runs-on: "macos-latest"
-    env:
-      PACKAGE: "tools/icefunprog"
-      OS_NAME: "osx"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #16
-  flterm-osx:
-    runs-on: "macos-latest"
-    env:
-      PACKAGE: "tools/flterm"
-      OS_NAME: "osx"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #17
-  libftdi-osx:
-    runs-on: "macos-latest"
-    needs: "libusb-osx"
-    env:
-      PACKAGE: "lib/ftdi"
-      OS_NAME: "osx"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #18
-  dfu-util-osx:
-    runs-on: "macos-latest"
-    needs: "libusb-osx"
-    env:
-      PACKAGE: "tools/dfu-util"
-      OS_NAME: "osx"
-    steps:
-      - uses: actions/checkout@v2
-      - run: brew install coreutils autoconf automake libtool
-      - uses: hdl/conda-ci@master
-
-  #19
-  iceprog-osx:
-    runs-on: "macos-latest"
-    needs: ["libusb-osx", "libftdi-osx"]
-    env:
-      PACKAGE: "tools/iceprog"
-      OS_NAME: "osx"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
-  #20
-  openocd-osx:
-    runs-on: "macos-latest"
-    needs: ["libusb-osx", "libftdi-osx"]
-    env:
-      PACKAGE: "tools/openocd"
-      OS_NAME: "osx"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: hdl/conda-ci@master
-
   #21
   libusb-windows:
     runs-on: "windows-2019"
@@ -279,26 +65,3 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: hdl/conda-ci@master
-
-
-  master-package:
-    runs-on: "ubuntu-20.04"
-    env:
-      OS_NAME: "linux"
-      CI_SCRIPTS_REL_PATH: "conda-ci"
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/checkout@v2
-        with:
-          repository: hdl/conda-ci
-          ref: master
-          path: ${{ env.CI_SCRIPTS_REL_PATH }}
-      - uses: actions/setup-python@v1
-      - uses: BSFishy/pip-action@v1
-        with:
-          packages: urllib3
-      - run: |
-          # Required internally by the scripts to locate other scripts.
-          export CI_SCRIPTS_PATH="$GITHUB_WORKSPACE/$CI_SCRIPTS_REL_PATH"
-          bash $CI_SCRIPTS_PATH/install.sh
-          python $CI_SCRIPTS_PATH/wait-for-statuses.py
